# fc-ai-pd12m

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  fc-pipelines.yaml  pyproject.toml
notebooks/: 01-dv-open_parquet_from_s3.ipynb  02-dv-join_data.ipynb  02-dv-polars_test.ipynb  03-dv-benchmark_threads.ipynb  04-dv-benchmark_ovh_urls.ipynb
scripts/: create_global_feather.sh  download_dataset.sh
src/fc_ai_pd12m/: create_global_feather.py  utils.py
tests/: test_dummy.py
